argocd/cluster-services/kagent/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kagent-ingress
  namespace: kagent
  annotations:
    cert-manager.io/cluster-issuer: ca-issuer
    nginx.ingress.kubernetes.io/rewrite-target: /ui

spec:
  ingressClassName: nginx
  rules:
  - host: kagent.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kagent
            port:
              number: 443
              
  tls:
  - hosts:
    - kagent.local
    secretName: kagent-tls-certs
